# xbioclim

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.py  vcpkg.json
.github/workflows/: Doxyfile  benchmark.yml  ci.yml  pipeline.yml  release.yml
apptainer/: xbioclim.def
build_offload/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  generate_mock_tiff  xbioclim_cli
build_offload/Testing/Temporary/: CTestCostData.txt
build_offload/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_xbioclim  test_xbioclim-b12d07c_include.cmake  test_xbioclim-b12d07c_tests.cmake
cmake/: FindGDAL.cmake  FindXtensor.cmake  XbioclimCheckGDAL.cmake  XbioclimCheckXtensor.cmake
docs/: BENCHMARKS.md  HPC_APPTAINER.md  PROTOCOL.md  RELEASE_GUIDELINES.md  ROADMAP.md  R_WRAPPER_ROADMAP.md
include/xbioclim/: bioclim.hpp  bioclim_cuda.hpp  gdal_io.hpp  primitives.hpp  version.hpp
scripts/: check_cog.py  run_slurm_apptainer.sh  run_slurm_array.sh  validate_cog_outputs.sh
src/: bioclim.cpp  bioclim_cuda.cu  gdal_io.cpp  main.cpp  primitives.cpp
tests/: CMakeLists.txt  test_bioclim.cpp  test_correctness.cpp  test_cuda_bioclim.cpp  test_gdal_io.cpp  test_primitives.cpp
tools/: generate_mock_tiff.cpp  generate_test_data.py  parse_benchmark.py
